# pdf-mcp

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
src/pdf_mcp/: __init__.py  __main__.py  config.py  db.py  embedder.py  indexer.py  relevance.py  server.py
src/pdf_mcp/tools/: managing.py  reading.py  searching.py
tests/: conftest.py  test_db.py  test_embedder.py  test_indexer.py
