[project]
name = "pdf-mcp"
version = "0.1.0"
description = "PDF filing cabinet MCP server with full-text search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.1",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=5.3.0",
    "sqlite-vec>=0.1.7",
    "structlog>=25.5.0",
]

[project.scripts]
pdf-mcp = "pdf_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_mcp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
